--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "process": "^0.11.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-ga4": "^2.1.0",
     "rss-parser": "^3.13.0",
     "stream-browserify": "^3.0.0",
     "styled-jsx": "^5.1.7",
